@startuml
  namespace edu.kit.scc.dem.tuhl {
    namespace mainpage {
      class edu.kit.scc.dem.tuhl.mainpage.MainPageController {
          + init()
      }

      namespace dashboard {
              class edu.kit.scc.dem.tuhl.mainpage.dashboard.DashboardController {
                  + showDashboard()
              }

              class edu.kit.scc.dem.tuhl.mainpage.dashboard.DashboardService {
                  - availableContentViews : String[]
                  - currentContentView : String
                  + getAvailableContentViews()
                  + getCurrentContentView()
                  + setCurrentContentView()
              }

              interface edu.kit.scc.dem.tuhl.mainpage.dashboard.IDashboardService {
                  {abstract} + getAvailableContentViews()
                  {abstract} + getCurrentContentView()
                  {abstract} + setCurrentContentView()
              }

              namespace contentview {
                        interface edu.kit.scc.dem.tuhl.mainpage.dashboard.contentview.IContentViewService {
                            {abstract} + getType()
                        }

                        class edu.kit.scc.dem.tuhl.mainpage.dashboard.contentview.TableViewController {
                            + addAttribute()
                            + deleteAttribute()
                            + nextPage()
                            + showContentView()
                            + showThumbnails()
                        }

                        class edu.kit.scc.dem.tuhl.mainpage.dashboard.contentview.TableViewService {
                            - currentAttributes : List<String>
                            - type : String
                            + TableViewService()
                            + addAttribute()
                            + deleteAttribute()
                            + getCurrentAttributes()
                            + getThumbnails()
                            + getType()
                        }
                      }
            }

            namespace search {
                    class edu.kit.scc.dem.tuhl.mainpage.search.FilterController {
                        + FilterController()
                        + addFilters()
                        + applyFilters()
                        + clearFilters()
                        + removeFilter()
                    }

                    class edu.kit.scc.dem.tuhl.mainpage.search.FilterService {
                        - currentFilters : List<Filter>
                        - possibleFilters : List<Filter>
                        + addToCurrentFilters()
                        + getCurrentFilters()
                        + getPossibleFilters()
                        + removeFromCurrentFilters()
                        + setCurrentFilters()
                    }

                    interface edu.kit.scc.dem.tuhl.mainpage.search.IFilterService {
                        {abstract} + addToCurrentFilters()
                        {abstract} + getCurrentFilters()
                        {abstract} + getPossibleFilters()
                        {abstract} + removeFromCurrentFilters()
                        {abstract} + setCurrentFilters()
                    }

                    interface edu.kit.scc.dem.tuhl.mainpage.search.ISearchIndexService {
                        {abstract} + addAnnotation()
                        {abstract} + addTextCard()
                        {abstract} + buildIndex()
                        {abstract} + deleteAnnotationById()
                        {abstract} + deleteTextCardById()
                        {abstract} + getAnnotationById()
                        {abstract} + getManuscriptById()
                        {abstract} + getPageById()
                        {abstract} + getRawAnnotationJson()
                        {abstract} + getRawManuscriptJson()
                        {abstract} + getRawManuscriptXml()
                        {abstract} + getRawPageJson()
                        {abstract} + getTextCardById()
                        {abstract} + updateAnnotation()
                        {abstract} + updateIndex()
                        {abstract} + updateTextCard()
                    }

                    interface edu.kit.scc.dem.tuhl.mainpage.search.ISearchService {
                        {abstract} + getPageSize()
                        {abstract} + getResults()
                        {abstract} + search()
                        {abstract} + search()
                        {abstract} + setPageSize()
                    }

                    interface edu.kit.scc.dem.tuhl.mainpage.search.ManuscriptRepository {
                    }

                    class edu.kit.scc.dem.tuhl.mainpage.search.SearchController {
                        + SearchController()
                        + search()
                    }

                    class edu.kit.scc.dem.tuhl.mainpage.search.SearchIndexService {
                        + SearchIndexService()
                        + addAnnotation()
                        + addTextCard()
                        + buildIndex()
                        + deleteAnnotationById()
                        + deleteTextCardById()
                        + getAnnotationById()
                        + getManuscriptById()
                        + getPageById()
                        + getRawAnnotationJson()
                        + getRawManuscriptJson()
                        + getRawManuscriptXml()
                        + getRawPageJson()
                        + getTextCardById()
                        + updateAnnotation()
                        + updateIndex()
                        + updateTextCard()
                    }

                    class edu.kit.scc.dem.tuhl.mainpage.search.SearchService {
                        + SearchService()
                        + getPageSize()
                        + getResults()
                        + search()
                        + search()
                        + setPageSize()
                    }
                  }
    }
  }


  edu.kit.scc.dem.tuhl.mainpage.MainPageController o-up- edu.kit.scc.dem.tuhl.mainpage.dashboard.IDashboardService : dashboardService
  edu.kit.scc.dem.tuhl.mainpage.MainPageController o-right- edu.kit.scc.dem.tuhl.mainpage.search.IFilterService : filterService

edu.kit.scc.dem.tuhl.mainpage.dashboard.DashboardController o-- edu.kit.scc.dem.tuhl.mainpage.dashboard.IDashboardService : dashboardService
  edu.kit.scc.dem.tuhl.mainpage.dashboard.DashboardService ..|> edu.kit.scc.dem.tuhl.mainpage.dashboard.IDashboardService

  edu.kit.scc.dem.tuhl.mainpage.dashboard.contentview.TableViewController o-- edu.kit.scc.dem.tuhl.mainpage.dashboard.contentview.TableViewService : tableViewService
    edu.kit.scc.dem.tuhl.mainpage.dashboard.contentview.TableViewService ..|> edu.kit.scc.dem.tuhl.mainpage.dashboard.contentview.IContentViewService
    edu.kit.scc.dem.tuhl.mainpage.dashboard.contentview.TableViewService o-up- edu.kit.scc.dem.tuhl.mainpage.search.ISearchIndexService : searchIndexService
    edu.kit.scc.dem.tuhl.mainpage.dashboard.contentview.TableViewService o-- edu.kit.scc.dem.tuhl.mainpage.search.ISearchService : searchService

    edu.kit.scc.dem.tuhl.mainpage.search.FilterController o-up- edu.kit.scc.dem.tuhl.mainpage.search.IFilterService : filterService
      edu.kit.scc.dem.tuhl.mainpage.search.FilterService ..|> edu.kit.scc.dem.tuhl.mainpage.search.IFilterService
      edu.kit.scc.dem.tuhl.mainpage.search.SearchController o-up- edu.kit.scc.dem.tuhl.mainpage.search.ISearchService : searchService
      edu.kit.scc.dem.tuhl.mainpage.search.SearchIndexService ..|> edu.kit.scc.dem.tuhl.mainpage.search.ISearchIndexService
      edu.kit.scc.dem.tuhl.mainpage.search.SearchIndexService o-up- edu.kit.scc.dem.tuhl.dataaccess.IAccessService : accessService
      edu.kit.scc.dem.tuhl.mainpage.search.SearchService ..|> edu.kit.scc.dem.tuhl.mainpage.search.ISearchService
      edu.kit.scc.dem.tuhl.mainpage.search.SearchService o-up- edu.kit.scc.dem.tuhl.mainpage.search.IFilterService : filterService
@enduml
